<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#5fb0c9"
    android:layout_height="match_parent"
    tools:context=".LecturerProfileUpdate">

    <Button
        android:id="@+id/sendUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="190dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/update_profilelecturer"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/lectuerUpdatefullname"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lecturerUpdateEmail"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/lectuerUpdatefullname"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/lecturerUpdatePassword"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/lecturerUpdateEmail"
        android:layout_marginTop="135dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/lecturerIDNumber"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/lecturerUpdatePassword"
        android:layout_marginTop="196dp"
        android:ems="10"
        android:hint="@string/id_numberupdate"
        />

</RelativeLayout>