<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentProfile"
    android:background="#5fb0c9"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/userprofile" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/imageView1"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/StudentprofileName"
            android:layout_width="264dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="88dp"
            android:gravity="center_vertical"
            android:text=" "
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/imageView2"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/e_mailstu"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/StudentprofileEmail"
            android:layout_width="267dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="85dp"
            android:gravity="center_vertical"
            android:text=" "
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/imageView3"
            android:layout_width="118dp"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/reg_numberstu"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/StudentprofileRegNumber"
            android:layout_width="232dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="120dp"
            android:gravity="center_vertical"
            android:text=" "
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>