<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#5fb0c9"
    android:layout_height="match_parent"
    tools:context=".LecturerPage"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="center"
        android:src="@drawable/lecturermain" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/colorPrimary"
        android:layout_marginRight="16dp"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_view_list_black_24dp" />

        <TextView
            android:id="@+id/lecturerpagescore"
            android:layout_width="323dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="61dp"
            android:gravity="center_vertical"
            android:text="@string/student_score_sheet" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_view_headline_black_24dp" />

        <TextView
            android:id="@+id/lecturerpageassignment"
            android:layout_width="323dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            android:layout_marginStart="61dp"
            android:gravity="center_vertical"
            android:text="@string/assignment" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_person_black_24dp" />

        <TextView
            android:id="@+id/lecturerpageprofileupdate"
            android:layout_width="323dp"

            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:textColor="@color/white"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            android:layout_marginStart="61dp"
            android:gravity="center_vertical"
            android:text="@string/update_profile" />
    </RelativeLayout>

</LinearLayout>